fix h1 letter spacing on safari

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,8 @@ p {
 }
 
 h1 {
+  font-weight: 500;
+  font-family: "SFUIText-Regular";
   margin: 8px 0;
   font-size: 1.6em;
 }
