--- a/src/styles/Comment.css
+++ b/src/styles/Comment.css
@@ -277,7 +277,7 @@
   width: 100%;
   height: 28px;
   padding: 4px 12px;
-  border: 1px solid rgb(170, 170, 170);
+  border: 1px solid rgb(200, 200, 200);
   border-radius: 14px;
   font-family: inherit;
   font-size: inherit;
